-
Bug
-
Resolution: Fixed
-
P1: Critical
-
None
-
6.8.3
-
None
-
-
b75ca109d (dev), 504dbcd1d (6.9), 71ca61ffd (tqtc/lts-6.8)
-
2025wk18s1QtforAndroid
I have created an Android app with Qt/QML which is available on Google Play. In my dashboard I see quite a few crashes with this stack dump.
-
-
- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***
pid: 0, tid: 17201 >>> com.gmail.mfnboer.skywalker <<<backtrace:
#00 pc 0x000000000009f05a /data/app/~~SAwFtdT84Hgup1q7ZACLJw==/com.gmail.mfnboer.skywalker-kFqXFV94Ll6i99s5J2S3oQ==/lib/arm/libQt6Multimedia_armeabi-v7a.so (BuildId: af52456393c5a01ddb001135344913c9bd7f5c94)
#01 pc 0x000000000009efb9 /data/app/~~SAwFtdT84Hgup1q7ZACLJw==/com.gmail.mfnboer.skywalker-kFqXFV94Ll6i99s5J2S3oQ==/lib/arm/libQt6Multimedia_armeabi-v7a.so (QVideoTextureHelper::createTextures(QVideoFrame const&, QRhi&, QRhiResourceUpdateBatch&, std::_ndk1::unique_ptr<QVideoFrameTextures, std::_ndk1::default_delete<QVideoFrameTextures> >)+1264) (BuildId: af52456393c5a01ddb001135344913c9bd7f5c94)
#02 pc 0x000000000009ff63 /data/app/~~SAwFtdT84Hgup1q7ZACLJw==/com.gmail.mfnboer.skywalker-kFqXFV94Ll6i99s5J2S3oQ==/lib/arm/libQt6Multimedia_armeabi-v7a.so (QVideoFrameTexturePool::updateTextures(QRhi&, QRhiResourceUpdateBatch&)+66) (BuildId: af52456393c5a01ddb001135344913c9bd7f5c94)
#03 pc 0x000000000001ca11 /data/app/~~SAwFtdT84Hgup1q7ZACLJw==/com.gmail.mfnboer.skywalker-kFqXFV94Ll6i99s5J2S3oQ==/lib/arm/libQt6MultimediaQuick_armeabi-v7a.so (BuildId: b9668ed6d3b3310881675a68f8bc3fd24a7db148)
#04 pc 0x000000000001ca8f /data/app/~~SAwFtdT84Hgup1q7ZACLJw==/com.gmail.mfnboer.skywalker-kFqXFV94Ll6i99s5J2S3oQ==/lib/arm/libQt6MultimediaQuick_armeabi-v7a.so (BuildId: b9668ed6d3b3310881675a68f8bc3fd24a7db148)
#05 pc 0x00000000002c164f /data/app/~~SAwFtdT84Hgup1q7ZACLJw==/com.gmail.mfnboer.skywalker-kFqXFV94Ll6i99s5J2S3oQ==/lib/arm/libQt6Quick_armeabi-v7a.so (QSGBatchRenderer::Renderer::updateMaterialDynamicData(QSGBatchRenderer::ShaderManagerShader*, QSGMaterialShader::RenderState&, QSGMaterial*, QSGBatchRenderer::Batch const*, QSGBatchRenderer::Element*, int, int, char*)+118) (BuildId: ea85ba027241314652934b700d1b7940b1f361c0)
#06 pc 0x00000000002c203d /data/app/~~SAwFtdT84Hgup1q7ZACLJw==/com.gmail.mfnboer.skywalker-kFqXFV94Ll6i99s5J2S3oQ==/lib/arm/libQt6Quick_armeabi-v7a.so (QSGBatchRenderer::Renderer::prepareRenderMergedBatch(QSGBatchRenderer::Batch*, QSGBatchRenderer::Renderer::PreparedRenderBatch*)+584) (BuildId: ea85ba027241314652934b700d1b7940b1f361c0)
#07 pc 0x00000000002c3365 /data/app/~~SAwFtdT84Hgup1q7ZACLJw==/com.gmail.mfnboer.skywalker-kFqXFV94Ll6i99s5J2S3oQ==/lib/arm/libQt6Quick_armeabi-v7a.so (QSGBatchRenderer::Renderer::prepareRenderPass(QSGBatchRenderer::Renderer::RenderPassContext*)+1024) (BuildId: ea85ba027241314652934b700d1b7940b1f361c0)
#08 pc 0x00000000002c2f45 /data/app/~~SAwFtdT84Hgup1q7ZACLJw==/com.gmail.mfnboer.skywalker-kFqXFV94Ll6i99s5J2S3oQ==/lib/arm/libQt6Quick_armeabi-v7a.so (QSGBatchRenderer::Renderer::render()+20) (BuildId: ea85ba027241314652934b700d1b7940b1f361c0)
#09 pc 0x00000000002d203f /data/app/~~SAwFtdT84Hgup1q7ZACLJw==/com.gmail.mfnboer.skywalker-kFqXFV94Ll6i99s5J2S3oQ==/lib/arm/libQt6Quick_armeabi-v7a.so (QSGRenderer::renderScene()+106) (BuildId: ea85ba027241314652934b700d1b7940b1f361c0)
#10 pc 0x000000000029dff9 /data/app/~~SAwFtdT84Hgup1q7ZACLJw==/com.gmail.mfnboer.skywalker-kFqXFV94Ll6i99s5J2S3oQ==/lib/arm/libQt6Quick_armeabi-v7a.so (QQuickWindowPrivate::renderSceneGraph()+484) (BuildId: ea85ba027241314652934b700d1b7940b1f361c0)
#11 pc 0x00000000003bd079 /data/app/~~SAwFtdT84Hgup1q7ZACLJw==/com.gmail.mfnboer.skywalker-kFqXFV94Ll6i99s5J2S3oQ==/lib/arm/libQt6Quick_armeabi-v7a.so (BuildId: ea85ba027241314652934b700d1b7940b1f361c0)
#12 pc 0x00000000003bdbf7 /data/app/~~SAwFtdT84Hgup1q7ZACLJw==/com.gmail.mfnboer.skywalker-kFqXFV94Ll6i99s5J2S3oQ==/lib/arm/libQt6Quick_armeabi-v7a.so (BuildId: ea85ba027241314652934b700d1b7940b1f361c0)
#13 pc 0x0000000000310ec5 /data/app/~~SAwFtdT84Hgup1q7ZACLJw==/com.gmail.mfnboer.skywalker-kFqXFV94Ll6i99s5J2S3oQ==/lib/arm/libQt6Core_armeabi-v7a.so (BuildId: 9630d22248ed5fa9af6f234bb9e88cb292c1ba84)
#14 pc 0x00000000000ae253 /apex/com.android.runtime/lib/bionic/libc.so (__pthread_start(void*)+40)
#15 pc 0x0000000000064123 /apex/com.android.runtime/lib/bionic/libc.so (__start_thread+30)
This crash comes from a Samsung Galaxy M14 phone. I cannot reproduce this on my Samsung S22. All works fine there.
- *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***
-
One obvious difference seems that the M14 has a 32-bit processor opposed to my 64-bit.
Could this be a bug in the 32-bit QT library?
- depends on
-
QTBUG-136493 FFmpeg not properly configured with multi-abi builds
-
- Closed
-
- is duplicated by
-
QTBUG-136949 [REG 6.7.3-6.8.3] Sporadic crashes on QVideoTextureHelper::createTextures
-
- Closed
-
| For Gerrit Dashboard: QTBUG-135873 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 644094,3 | QVideoTextureHelper: Fix potential nullptr access | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 644165,2 | QVideoTextureHelper: Fix potential nullptr access | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 644258,2 | QVideoTextureHelper: Fix potential nullptr access | tqtc/lts-6.8 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |