QVideoTextureHelper: Fix potential nullptr access

Fix a potential crash caused by dereferencing a null pointer in the
setSourceFrame lambda within createTextures(). This can occur when
result is nullptr, particularly when it is taken from
createTexturesFromMemory().

Pick-to: 6.9 6.8
Task-number: QTBUG-135873
Change-Id: I6ec8dd20de5e0b0b731ddeee0ad06b6770a70de7
Reviewed-by: Tim Blechmann <tim.blechmann@qt.io>